tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/ConflictScope.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error LAMA0226 on `Dictionary<IMethod,TargetCode>`: `The generic type 'Dictionary<IMethod,TargetCode>' combines run-time-only and compile-time-only types.`